fix for vertical alignment in page management page menu

--- a/Stylesheets/src/Neptune/Pages/CMS/page--page-mgt.scss
+++ b/Stylesheets/src/Neptune/Pages/CMS/page--page-mgt.scss
@@ -44,10 +44,6 @@
 			}
 		}
 
-		.se_icon-con {
-			vertical-align: top;
-		}
-
 		.se_selected_site_element{
 			background-color: $color-cornsilk;
 		}
